objects/WT_Goal_Metric__c.object
<CustomObject>
    <description>Re-usable metric that can be assigned to multiple Goals</description>
    <fields>
        <fullName>WT_Actual_Result_Criteria_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Result Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Actual_Result_Criteria__c</fullName>
        <description>This field is store the JSON structure of the goal criteria from UI</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Result Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Actual_Result_Date_Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Result Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CRM_Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SF Field To Sum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CRM_Object_API_Name__c</fullName>
        <label>SF Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_InProgress_Result_Criteria__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In Progress Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_InProgress_Result_Date_Field_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In Progress Result Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_In_Progress_Criteria_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In Progress Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Metric_Type__c</fullName>
        <description>Type of roll-up operation applied to the Metric</description>
        <label>Metric Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Goal Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WT_CRM_Object_API_Name__c</columns>
        <columns>WT_Metric_Type__c</columns>
        <columns>WT_CRM_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goal Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>WT_Goal_Metrics_Access_New</fullName>
        <active>true</active>
        <description>This rule is  to throw an error message to the user who tries to create a Goal metrics record other than WT Business Admin</description>
        <errorConditionFormula>AND(($Profile.Name !=&quot;WT Business Administrator&quot;),
     ($Profile.Name !=&quot;WT Technical Administrator&quot;),
     ($Profile.Name !=&quot;System Administrator&quot;),ISNEW())</errorConditionFormula>
        <errorMessage>The user does not have access to enter the goal metric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WT_Goal_Metrics_Access_Update</fullName>
        <active>true</active>
        <description>This Rule is to throw an error message to the user other than WT Business Admin tries to update the Goal metrics record.</description>
        <errorConditionFormula>AND(($Profile.Name !=&quot;WT Business Administrator&quot;),
       ($Profile.Name !=&quot;WT Technical Administrator&quot;),
       ($Profile.Name !=&quot;System Administrator&quot;),
OR( ISCHANGED( WT_Actual_Result_Criteria__c),
   ISCHANGED( WT_Metric_Type__c),
   ISCHANGED( WT_Actual_Result_Criteria_Logic__c),
   ISCHANGED( WT_Actual_Result_Date_Field_API_Name__c),
   ISCHANGED( WT_InProgress_Result_Criteria__c),
   ISCHANGED( WT_In_Progress_Criteria_Logic__c),
   ISCHANGED( WT_InProgress_Result_Date_Field_API_Name__c),
   ISCHANGED( Name),
   ISCHANGED( WT_CRM_Field_API_Name__c),
   ISCHANGED( WT_CRM_Object_API_Name__c)))</errorConditionFormula>
        <errorDisplayField>WT_Actual_Result_Criteria__c</errorDisplayField>
        <errorMessage>The user does not have access to update the goal metric.</errorMessage>
    </validationRules>
</CustomObject>